--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         </section>
         <section>
             <form action="">
-                <h3>Suscribete</h3>
+                <h3><i class="fa-solid fa-subscript"></i> Suscribete</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quidem?</p>
                 <label for="email"><i class="fa-solid fa-envelope"></i>Email</label>
                 <input type="email" name="email" id="email">
