--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="description" content="IkusMira es una empresa dedicada a la produccion de videos">
 
     <meta name="author" content="IkusMira">
- 
+
     <meta name="copyright" content="IkusMira">
 
     <!-- CSS -->
@@ -30,29 +30,33 @@
                 <ul class="menu">
 
                     <li>servicios
-                        <ul>
-                            <li>produccion de videos corporativos
-
-                                <ul>
-                                    <li>visal efect</li>
-                                    <li> Visuales parea redes sociales</li>
-                                    <li>animaciones</li>
-                                    <li>manejo de drones</li>
-                                </ul>
-                            </li>
-                        </ul>
+                        <nav class="submenu_nav-principal">
+                            <ul>
+                                <li>produccion de videos corporativos
+                                    <nav class="submenu2_submenu_nav-principal"> <ul>
+                                <li>visal efect</li>
+                                <li> Visuales parea redes sociales</li>
+                                <li>animaciones</li>
+                                <li>manejo de drones</li>
+                            </ul>
+                        </nav>
                     </li>
-                    <li>Conocenos
-                        <ul>
-                            <li>Misión</li>
-                            <li>Visión</li>
-                            <li>Valores</li>
-                        </ul>
-                    </li>
-                    <li>Proyectos</li>
-                    <li>Contacto</li>
-                    <li>Blog</li>
                 </ul>
+            </nav>
+            </li>
+            <li>Conocenos
+                <na class="submenu3_nav-principal">
+                    <ul>
+                        <li>Misión</li>
+                        <li>Visión</li>
+                        <li>Valores</li>
+                    </ul>
+                </na>
+            </li>
+            <li>Proyectos</li>
+            <li>Contacto</li>
+            <li>Blog</li>
+            </ul>
             </nav>
         </header>
 
@@ -99,7 +103,10 @@
             <section>
                 <article>
                     <h3>politicas y terminos</h3>
-                    <p>Lorem ipsum dolor sit amet <details><summary>leer mas</summary></details>consectetur adipisicing elit. Quisquam, quidem?</p>
+                    <p>Lorem ipsum dolor sit amet
+                    <details>
+                        <summary>leer mas</summary>
+                    </details>consectetur adipisicing elit. Quisquam, quidem?</p>
                 </article>
                 <form action="">
                     <h3>Suscribete</h3>
