--- a/index.html
+++ b/index.html
@@ -33,30 +33,31 @@
                         <nav class="submenu_nav-principal">
                             <ul>
                                 <li>produccion de videos corporativos
-                                    <nav class="submenu2_submenu_nav-principal"> <ul>
-                                <li>visal efect</li>
-                                <li> Visuales parea redes sociales</li>
-                                <li>animaciones</li>
-                                <li>manejo de drones</li>
+                                    <nav class="submenu2_submenu_nav-principal">
+                                        <ul>
+                                            <li>visal efect</li>
+                                            <li> Visuales parea redes sociales</li>
+                                            <li>animaciones</li>
+                                            <li>manejo de drones</li>
+                                        </ul>
+                                    </nav>
+                                </li>
                             </ul>
                         </nav>
                     </li>
+                    <li>Conocenos
+                        <na class="submenu3_nav-principal">
+                            <ul>
+                                <li>Misión</li>
+                                <li>Visión</li>
+                                <li>Valores</li>
+                            </ul>
+                        </na>
+                    </li>
+                    <li>Proyectos</li>
+                    <li>Contacto</li>
+                    <li>Blog</li>
                 </ul>
-            </nav>
-            </li>
-            <li>Conocenos
-                <na class="submenu3_nav-principal">
-                    <ul>
-                        <li>Misión</li>
-                        <li>Visión</li>
-                        <li>Valores</li>
-                    </ul>
-                </na>
-            </li>
-            <li>Proyectos</li>
-            <li>Contacto</li>
-            <li>Blog</li>
-            </ul>
             </nav>
         </header>
 
