--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- DESCRIPTION para las búsquedas referente a audiovisual -->
     <meta name="description" content="IkusMira es una empresa dedicada a la produccion de videos">
 
-    <meta name="author" content="IkusMira">
+    <meta name="author" content="jefry jaquez santana">
 
     <meta name="copyright" content="IkusMira">
 
@@ -25,38 +25,38 @@
 <body>
     <div class="contenedor">
         <header class="cabecera">
-            <h1>IkusMira</h1>
+            <div class="logoTitulo">
+                <h1>IkusMira</h1>
+            </div>
             <nav class="nav-principal">
                 <ul class="menu">
 
-                    <li>servicios
-                        <nav class="submenu_nav-principal">
+                    <li> <button class="botton">Servicios</button>
+                        <nav class="submenu-menu">
                             <ul>
-                                <li>produccion de videos corporativos
-                                    <nav class="submenu2_submenu_nav-principal">
-                                        <ul>
-                                            <li>visal efect</li>
-                                            <li> Visuales parea redes sociales</li>
-                                            <li>animaciones</li>
-                                            <li>manejo de drones</li>
-                                        </ul>
-                                    </nav>
-                                </li>
-                            </ul>
+                                <li><a href="#">produccion de videos corporativos</a>
+                                <li>visal efect</li>
+                                <li> Visuales parea redes sociales</li>
+                                <li>animaciones</li>
+                                <li>manejo de drones</li>
+
                         </nav>
                     </li>
-                    <li>Conocenos
-                        <na class="submenu3_nav-principal">
-                            <ul>
+
+
+                    </li>
+                    <li> <button class="botton1">Conocenos</button>
+                        <nav class="submenu2-menu">
+                            <ul class="menu_submenu2">
                                 <li>Misión</li>
                                 <li>Visión</li>
                                 <li>Valores</li>
                             </ul>
-                        </na>
+                        </nav>
                     </li>
-                    <li>Proyectos</li>
-                    <li>Contacto</li>
-                    <li>Blog</li>
+                    <li><button>Proyectos</button></li>
+                    <li><button>Contacto</button></li>
+                    <li><button>Blog</button></li>
                 </ul>
             </nav>
         </header>
@@ -79,17 +79,17 @@
                 <h2>Article 3</h2>
         </section>
         <footer class="pie">
-            <section>
+            <section class="section1-pie">
                 <h3>IkusMira</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quidem?</p>
             </section>
-            <section>
+            <section class="section2-pie">
                 <h3>Contacto</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quidem?</p>
             </section>
-            <section>
+            <section class="section3-pie">
                 <h3>Redes sociales</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quidem?</p>
+                <p>Nos puedes encontrar tambien</p>
                 <ul>
                     <li><a href="http://" target="_blank" rel="noopener noreferrer"><i
                                 class="fa-brands fa-facebook"></i></a></li>
@@ -101,7 +101,7 @@
                             </i></a></li>
                 </ul>
             </section>
-            <section>
+            <section class="section4-pie">
                 <article>
                     <h3>politicas y terminos</h3>
                     <p>Lorem ipsum dolor sit amet
@@ -111,7 +111,7 @@
                 </article>
                 <form action="">
                     <h3>Suscribete</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quidem?</p>
+                    <p>Suscribete para no perderte nuestra informacion</p>
                     <label for="email"><i class="fa-solid fa-envelope"></i>Email</label>
                     <input type="email" name="email" id="email">
                     <input type="submit" value="Suscribete">
