--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                             <p>Suscribete para no perderte nuestra informacion</p>
                             <label for="email"><i class="fa-solid fa-envelope"></i>Email</label>
                             <input type="email" name="email" id="email">
-                            <input type="submit" value="Suscribete">
+                            <input type="submit" value="Suscribete" id="toma">
 
                         </form>
                     </section>
