--- a/index.html
+++ b/index.html
@@ -28,8 +28,11 @@
 
 
             <header class="cabecera">
+                <div class="cajaboton">
+                    <button class="bottonMenu-cajaboton"><i class="fa-solid fa-bars"></i></button>
+                </div>
                 <div class="logoTitulo">
-                    <h1><a href="#">IkusMira</a></h1>
+                    <h1 class="titulo"><a href="#">IkusMira</a></h1>
                     <nav class="nav-principal">
                         <ul class="menu">
 
@@ -64,14 +67,13 @@
 
                 </div>
                 <div class="buscaCesta">
-                    <section>
-                        <form action="">
-                            <input type="search" name="" id="">
-                    
+                    <section class="busca-buscaCesta">
+                            <input type="search" name="buscar" placeholder="Buscar" id="">
+
                     </section>
                     <nav class="nav-secundario">
                         <ul class="soporte">
-                            <li><a href="#">inicio de sesion</a></li>
+                            <li><a href="#">iniciar sesion</a></li>
                             <li><a href="#">ayuda</a></li>
                             <li><a href="#">cesta</a><button type="button">(0)</button></li>
 
