buscaCesta sin contenido

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+git<!DOCTYPE html>
 <html lang="es">
 
 <head>
@@ -32,7 +32,7 @@
                     <button class="bottonMenu-cajaboton"><i class="fa-solid fa-bars"></i></button>
                 </div>
                 <div class="logoTitulo">
-                    <h1 class="titulo"><a href="#">IkusMira</a></h1>
+                    <h1 class="titulo"><a href="#">IkusMira MD</a></h1>
                     <nav class="nav-principal">
                         <ul class="menu">
 
@@ -67,7 +67,7 @@
 
                 </div>
                 <div class="buscaCesta">
-                    <section class="busca-buscaCesta">
+                    <!-- <section class="busca-buscaCesta">
                             <input type="search" name="buscar" placeholder="Buscar" id="">
 
                     </section>
@@ -78,7 +78,7 @@
                             <li><a href="#">cesta</a><button type="button">(0)</button></li>
 
                         </ul>
-                    </nav>
+                    </nav> -->
                 </div>
 
             </header>
