--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@ git<!DOCTYPE html>
     <meta name="keywords" content="IkusMira, audiovisual ,drones, ikus, mira, multimedia">
 
     <!-- DESCRIPTION para las búsquedas referente a audiovisual -->
-    <meta name="description" content="IkusMira es una empresa dedicada a la produccion de videos">
-
+    <meta name="description" content="IkusView es una empresa dedicada a la 
+    produccion de videos promocionales para pequenas y medianas empresas">
     <meta name="author" content="jefry jaquez santana">
 
-    <meta name="copyright" content="IkusMira">
+    <meta name="copyright" content="IkusView">
 
     <!-- CSS -->
 
     <link rel="stylesheet" href="css/main-style.css">
 
-    <title>IkusMira</title>
+    <title>IkusView</title>
 </head>
 
 <body>
@@ -32,7 +32,7 @@ git<!DOCTYPE html>
                     <button class="bottonMenu-cajaboton"><i class="fa-solid fa-bars"></i></button>
                 </div>
                 <div class="logoTitulo">
-                    <h1 class="titulo"><a href="#">IkusMira MD</a></h1>
+                    <h1 class="titulo"><a href="#">IkusView</a></h1>
                     <nav class="nav-principal">
                         <ul class="menu">
 
@@ -43,7 +43,6 @@ git<!DOCTYPE html>
                                         <li>visal efect</li>
                                         <li> Visuales parea redes sociales</li>
                                         <li>animaciones</li>
-                                        <li>manejo de drones</li>
                                     </ul>
                                 </nav>
                             </li>
