--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-git<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="es">
 
 <head>
@@ -49,7 +49,7 @@ git<!DOCTYPE html>
 
 
 
-                            <li> <button class="botton1">Conocenos</button>
+                            <li> <button class="botton1">Conócenos</button>
 
                                 <ul class="submenu2-menu">
                                     <li>Misión</li>
@@ -83,6 +83,59 @@ git<!DOCTYPE html>
             </header>
 
             <section class="principal">
+                
+                <div class="servicios-principal">
+                    <h1>Servicios</h1>
+                    <section class="section1-servicios">
+                        <h2>produccion de videos</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur 
+                            adipisicing elit. Quisquam, quidem?</p>
+
+                    </section>
+                    <section class="section2-servicios">
+                        <h2>visal efect</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur
+                            adipisicing elit. Quisquam, quidem?</p>
+
+                    </section>
+                    <section class="section3-servicios">
+                        <h2>visuales para redes sociales</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur
+                            adipisicing elit. Quisquam, quidem?</p>
+                    </section>
+                    <section class="section4-servicios">
+                        <h2>animaciones</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur
+                            adipisicing elit. Quisquam, quidem?</p>
+
+                    </section>
+
+                </div>
+
+                <div class="conocenos-principal">
+                    <h1>Conócenos</h1>
+                    <section class="section1-Conocenos">
+                        <h2>Misión</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur
+                            adipisicing elit. Quisquam, quidem?</p>
+
+                    </section>
+                    <section class="section2-Conocenos">
+                        <h2>Visión</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur
+                            adipisicing elit. Quisquam, quidem?</p>
+
+                    </section>
+                    <section class="section3-Conocenos">
+                        <h2>Valores</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur
+                            adipisicing elit. Quisquam, quidem?</p>
+
+                    </section>
+
+                </div>
+
+
 
                 <footer id="cPie" class="pie">
                     <section class="section1-pie">
